@startuml
left to right direction
title Módulo Hotel - Design de Componentes
skinparam componentStyle uml2
skinparam package {
  backgroundColor #E8EAF6
  borderColor #303F9F
}

' ==========================================================
' 1. DEFINIÇÃO DAS CAMADAS E INTERFACES
' ==========================================================

package Apresentacao <<Camada do Usuário>> {
    interface InterfaceApresentacaoHotel as IAHotel
    [ModuloApresentacaoHotel] as MAHotel
}

package Servico <<Camada Lógica>> {
    interface InterfaceServicoHotel as ISHotel
    [ModuloServicoHotel] as MSHotel
}

package Persistencia <<Camada de Acesso>> {
    interface InterfaceAcessoInformacao as IAI
    [ModuloAcessoInformacao] as MAI
}

[BD / STL] as DadosBrutos

' ==========================================================
' 2. RELAÇÕES DE REALIZAÇÃO (BOLA - O FORNECEDOR)
' ==========================================================
' Módulo implementa a interface e fornece o serviço
IAHotel o-- MAHotel : <<Controladora Apresentação>>
ISHotel o-- MSHotel : <<Controladora Serviço>>
IAI o-- MAI : <<Controladora Acesso Informação (CAI)>>


' ==========================================================
' 3. RELAÇÕES DE USO (SOQUETE - O CLIENTE)
' ==========================================================
' Apresentação depende de Serviço
MAHotel ..> ISHotel : Depende (CRUD Hotel)

' Serviço depende de Persistência
MSHotel ..> IAI : Depende (Buscar Dados)

' Persistência usa os Dados Brutos
MAI ..> DadosBrutos : Usa (READ/WRITE)

@enduml